# trpc_template_server

./: .gitignore  .gitmodules  .trpc_template_service.h.swo  CMakeLists.txt  README.md  access_token_service.cc  access_token_service.h  ssz_weixin_open_server.cc  trpc_template_server.cc  trpc_template_service.cc  trpc_template_service.h
conf/: app_busi_conf.yaml  app_db_conf.yaml  trpc_cpp.yaml  trpc_cpp_fiber.yaml
script/: restart.sh  start.sh  stop.sh
src/: trace_id_formatter.cc  trace_id_formatter.h
tool/: CMakeLists.txt  pack_util.cc  pack_util.h  trpc_cli.cc
